fixed wrap issue

--- a/src/app/components/detail-view/detail-view.component.scss
+++ b/src/app/components/detail-view/detail-view.component.scss
@@ -51,7 +51,6 @@
     list-style-type: none;
     margin: 0;
     padding: 0;
-    white-space: nowrap;
     line-height: 2;
 
     span {
